from enum import IntEnum


class Player(IntEnum):
    """Class-container with players assigning"""
    X = 1
    O = 2
